# KCReserve

./: README.md  render.yaml
backend/: .gitignore  README.md  add_first_admin.py  check_notifications.py  debug_remote_db.py  fix_db_enum.py  fix_enum_case.py  main.py  pyproject.toml  requirements.txt  test_email_config.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  refresh_token.py  reservation.py  system_setting.py  user.py  whitelist.py
backend/app/routes/: auth.py  export.py  health.py  reservations.py  system_settings.py
backend/app/schemas/: __init__.py  reservation.py  user.py  whitelist.py
backend/app/utils/: email.py
backend/migrations/: env.py
backend/migrations/versions/: 027bd63b5ce7_add_system_settings.py  10f21a303d6e_add_receives_notification_to_user.py  5b7a408ca051_add_display_message_and_rejection_.py  62341d6d83fa_add_cancellation_requested_to_enum.py  6c3c3ef70a7b_add_refresh_tokens_table.py  7c8e3a2d9b01_add_notify_applicant_to_reservations.py  88ed45e9fa96_add_display_name_to_users.py  a596faa3deb0_add_approval_message_to_reservations.py  bf64077c6c41_create_users_table.py  c4f0b2d6a91e_add_status_updated_by_to_reservations.py  e53e6f897e98_add_whitelist_and_reservation_tables.py  f66e89c00f83_add_cancellation_reason.py
backend/scripts/: update_reservation_text.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_reservations.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
(+18 files in other folders)
